@@ -1,3 +1,10 @@
+2011-07-19	The InnoDB Team
+
+	* buf/buf0buf.c, buf/buf0rea.c, handler/ha_innodb.cc,
+	include/buf0buf.h, include/buf0buf.ic, include/srv0srv.h,
+	srv/srv0srv.c:
+	Fix bug#Bug 12356373 by reintroducing random readahead
+
 2011-06-30	The InnoDB Team
 
 	* row/row0row.c:
